2011-03-24  Sam Steingold  <sds@gnu.org>

	Fix bug#3198722: arg warnings despite :ALLOW-OTHER-KEYS T
	* compiler.lisp (test-argument-syntax): report all wrong keys but
	only if :ALLOW-OTHER-KEYS T is not supplied
	(c-DIRECT-FUNCTION-CALL): duplicate and ignored keys are STYLE warnings

2011-03-24  Sam Steingold  <sds@gnu.org>

	* configure.in (AC_REVISION): explicitly call hg instead of using $Id$
	* m4/general.m4, modules/rawsock/configure.in:
	quote AC_LANG_PROGRAM to avoid an autoconf 2.68 warning
	* m4/address.m4, m4/filecharset.m4:
	use AC_LANG_PROGRAM to avoid an autoconf 2.68 warning
	* m4/eloop.m4, m4/param.m4:
	use AC_LANG_SOURCE to avoid an autoconf 2.68 warning

2011-03-23  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (wait, waitpid): remove, these
	functions never worked properly because clisp ignores SIGCHLD by
	default; one should be using POSIX:WAIT instead (bug#3224360)

2011-03-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean-modules, check-doc): update for the cvs->hg switch

2011-03-08  Sam Steingold  <sds@gnu.org>

	* Makefile.devel: update for the cvs->hg switch

2011-03-01  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (split_gen0_on_holes) [MULTITHREAD]: correctly mark the
	end of old generation (it is possible the split-hole to be for
	read-only pinned object)

2011-02-17  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:CREATE-GCONTEXT):
	use error_required_keywords()
	Reported by Peter Van Eynde <pvaneynd@debian.org>

2011-02-11  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (WITH_DEFERRED_INTERRUPTS): fix typo in name and really
	execute deferred interrupts
	* spvw.d (create_thread): allow interrupts in newly created threads
	* zthread.d (thread_stub): defer interrupts until low level per thread
	variables are initialized

2010-12-30  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* pathname.d (classify_namestring) [WIN32_NATIVE]: fixed condition.
